--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ byteorder = "0.5"
 enum_primitive = "*"
 error-chain = "0.10.0"
 binaryen = { path = "../binaryen-rs", version = "0.1.0" }
+docopt = "0.8"
+serde = "1.0"
+serde_derive = "1.0"
 
 [profile.dev]
 panic="abort"
